# FactoryGaurdAI

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  Dockerfile  Makefile  PLAN.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: pr.yml
apps/api/: main.py
apps/dashboard/: main.py
configs/data/: large.yaml  medium.yaml  small.yaml  tiny.yaml
configs/environments/: local.yaml  production.yaml  test.yaml
configs/models/: multimodal.yaml
configs/policies/: drift.yaml  promotion.yaml
deployment/azureml/: README.md
docs/: assumptions.md  decision-log.md  environment-assessment.md  handoff.md  implementation-plan.md  implementation-status.md  open-issues.md  risk-register.md  test-evidence.md
docs/adr/: ADR-0001-python-and-environment.md  ADR-0002-arm64-and-gpu-strategy.md  ADR-0003-data-storage-formats.md  ADR-0004-experiment-tracking.md  ADR-0005-model-registry.md  ADR-0006-multimodal-fusion-design.md  ADR-0007-graph-technology.md  ADR-0008-online-serving-target.md  ADR-0009-azureml-vs-aks.md  ADR-0010-authentication.md  ADR-0011-network-isolation.md  ADR-0012-model-serialization.md  ADR-0013-iac-tool.md  ADR-0014-cicd-identity.md  ADR-0015-optional-llm-use.md  ADR-0016-drift-detection.md  ADR-0017-human-approval-policy.md  ADR-0018-vision-architecture.md  ADR-0019-unsupervised-first-mode.md  ADR-0020-assistant-layer.md  ADR-0021-scope-simplifications-and-challengers.md
docs/architecture/: azure-architecture.md  data-flow.md  local-architecture.md  network-topology.md  security-architecture.md
docs/operations/: azure-deployment-runbook.md  azure-devops-equivalents.md  foundry-integration.md  retraining-runbook.md
docs/performance/: gb10-benchmark.md
docs/specification/: FactoryGuard-AI-Specification-v2.0.docx  factoryguard-spec-v2.md
docs/tutorials/: FACTORYGUARD-COMPLETE-TUTORIAL.md  tutorial-source-map.md
infrastructure/bicep/: README.md  main.bicep  stack.bicep
infrastructure/compose/: mlflow.Dockerfile  prometheus.yml
infrastructure/terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  providers.tf  variables.tf
pipelines/benchmark/: run_benchmark.py
pipelines/data/: generate.py  validate.py
pipelines/monitoring/: drift_report.py
pipelines/retraining/: check_and_retrain.py
pipelines/training/: train_baselines.py  (+1 more)
requirements/: base.in  challenger.txt  dev.in  lock.txt  ml.in  torch.txt
scripts/: doctor.py  issue_dev_token.py  sbom.sh  scan.sh  setup_env.sh
(+131 files in other folders)
