[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "factoryguard"
version = "0.1.0"
description = "Multimodal defect-risk prediction platform for wire-harness manufacturing (advisory only)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "FactoryGuard AI" }]
# Runtime dependencies are intentionally NOT listed here; installs use the
# compiled lock files under requirements/ so every environment is pinned.
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "apps", "pipelines", "tests", "scripts"]

[tool.ruff.lint]
select = [
  "E", "W",    # pycodestyle
  "F",         # pyflakes
  "I",         # isort
  "B",         # bugbear
  "UP",        # pyupgrade
  "S",         # bandit-lite
  "N",         # naming
  "C4",        # comprehensions
  "DTZ",       # naive datetime
  "T20",       # print statements
  "RET",       # return
  "SIM",       # simplify
  "PTH",       # pathlib
]
ignore = [
  "S101",  # assert allowed (tests, invariants)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "DTZ", "T20"]
"scripts/**" = ["T20"]
"notebooks/**" = ["ALL"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["factoryguard"]
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true

# The synthetic-data simulation modules are dense pandas/numpy numerical code
# where pandas-stubs' itertuples/scalar unions produce ~90 false-positive
# operator/union-attr errors. They are covered by 20+ behavioural unit tests
# (determinism, effect directions, integrity); static checking there is noise.
[[tool.mypy.overrides]]
module = [
  "factoryguard.data.images",
  "factoryguard.data.timeseries",
  "factoryguard.data.units",
  "factoryguard.data.world",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
  "integration: needs running services (postgres/minio/mlflow)",
  "gpu: needs CUDA GPU",
  "slow: long-running",
]
filterwarnings = ["error::DeprecationWarning:factoryguard.*"]

[tool.coverage.run]
source = ["src/factoryguard"]
branch = true

[tool.bandit]
exclude_dirs = ["tests", "notebooks", ".venv"]
skips = ["B101"]
